Fixed cropping of images and added new random names

--- a/client/less/post.import.less
+++ b/client/less/post.import.less
@@ -19,6 +19,14 @@
             >.avatar {
                 order: 2;
                 margin-left: 5px;
+
+                > .img {
+                  width: 80px;
+                  height: 80px;
+                  border-radius: 50%;
+                  background-size: 80px;
+                  background-position: center;
+                }
             }
 
             >.username {
