--- a/client/less/profile.import.less
+++ b/client/less/profile.import.less
@@ -4,6 +4,14 @@
 
   	.avatar {
 	  vertical-align: 10px;
+
+	  > .img {
+		width: 80px;
+		height: 80px;
+		border-radius: 50%;
+		background-size: 80px;
+		background-position: center;
+	  }
 	}
 
   	.username {
